initial loading of liquibase works

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>2.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+
         <!-- @Inject support -->
         <dependency>
             <groupId>javax.inject</groupId>
